Remove activationcode and used static data instead of flat file
